statum-macros/tests/ui/invalid_presentation_metadata_without_types.stderr
error: Error: `Draft` uses `#[present(metadata = ...)]`, but no `#[presentation_types(state = ...)]` was declared on its machine.
       Fix: add `#[presentation_types(state = StateMeta)]` to the `#[machine]` struct or remove the metadata expression.
  --> tests/ui/invalid_presentation_metadata_without_types.rs:25:1
   |
25 | #[machine]
   | ^^^^^^^^^^
   |
   = note: this error originates in the macro `__statum_emit_flow_state_presentation_entry` which comes from the expansion of the attribute macro `machine` (in Nightly builds, run with -Z macro-backtrace for more info)
